tmux utf8 support for old tmux and be quiet -q for new version

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -233,8 +233,8 @@ set-window-option -g message-style fg=black,bold,bg=colour11
 
 # Basic
 set-option -g status on
-set-option -g status-interval 2           # Update the status line every 2 seconds (15 is default)
-set-option -g status-utf8 on
+set-option -g status-interval 2   # Update the status line every 2 seconds (15 is default)
+set-option -gq status-utf8 on     # This is unknown option in latest tmux. But, I need this line for supporting old version of tmux. So, be quiet (-q) about it. 
 
 # Status Bar
 set-option -g status-style fg=white,bg=colour235
