make it convention based utility - use FHS

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -192,7 +192,7 @@ bind-key C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\";tmux paste-buff
 
 # To take ASCII screenshots (tmux-resurrect uses C-s for saving, here binding to Alt-s ) .
 # create the dir for storing screenshots
-bind-key M-s run "tmux capture-pane; tmux save-buffer ~/hrt/history/tmux/#{session_name}-#{window_index}-#{pane_index}-$(date +%Y%m%dT%H%M%S).screenshot"
+bind-key M-s run "tmux capture-pane; tmux save-buffer ~/hrt/state/tmux/#{session_name}-#{window_index}-#{pane_index}-$(date +%Y%m%dT%H%M%S).screenshot"
 
 # ```
 
@@ -281,7 +281,7 @@ set -g @cpu_percentage_format "%02d%%"
 set -g @ram_percentage_format "%02d%%"
 
 # By default files are saved in ~/.tmux/resurrect dir. Change this to our custom path
-set -g @resurrect-dir '~/hrt/resurrect/tmux'
+set -g @resurrect-dir '~/hrt/state/tmux/resurrect'
 
 # Last saved environment is automatically restored when tmux is started.
 set -g @continuum-boot 'on'  
@@ -293,7 +293,7 @@ set -g @continuum-save-interval '30'
 set -g @continuum-boot-options 'fullscreen' 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/hrt/plugins/tmux/tpm/tpm'
+run '~/hrt/opt/tmux/plugins/tpm/tpm'
 
 # Hit prefix + I to install plugins for the first time. It takes few seconds. So, wait before panic.
 # 
