Docker hands-on discover

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -46,7 +46,8 @@ bind-key M-r source-file ~/.tmux.conf \; display "Config Reloaded !"
 
 # Let me set my default to my fav shell - zsh. Macs now use zsh as the default login shell across the operating system. It is for a reason. Give it a try if you don't already use zsh as your default shell.
 # ```
-set-option -g default-shell /usr/bin/zsh          # login shell for new windows/pane
+# set-option -g default-shell /usr/bin/zsh          # login shell for new windows/pane
+set-option -g default-shell /bin/zsh
 # ```
 
 # #### 4. I Can't See Enough !
