util functions; auto complete scripts

--- a/settings/tmux/.tmux.conf
+++ b/settings/tmux/.tmux.conf
@@ -208,18 +208,18 @@ bind-key M-s run "tmux capture-pane; tmux save-buffer ~/hrt/state/tmux/#{session
 
 # ```
 # Set the default terminal mode to 256color mode
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 
 # Pane divider
-set-window-option -g pane-border-style fg=colour11,bg=colour234
-set-window-option -g pane-active-border-style fg=colour118,bg=colour234
+# set-window-option -g pane-border-style fg=colour11,bg=colour234
+# set-window-option -g pane-active-border-style fg=colour118,bg=colour234
 
 # Cool trick: Let's dim out any pane that's not active.
-set-window-option -g window-style fg=colour245,bg=colour237
-set-window-option -g window-active-style fg=colour230,bg=colour235
+# set-window-option -g window-style fg=colour245,bg=colour237
+# set-window-option -g window-active-style fg=colour230,bg=colour235
 
 # Command / Message line
-set-window-option -g message-style fg=black,bold,bg=colour11
+#set-window-option -g message-style fg=black,bold,bg=colour11
 # ```
 
 # #### 12. Dress Up the Status Line
