--- a/settings/ssh/ssh_server.config
+++ b/settings/ssh/ssh_server.config
@@ -6,27 +6,7 @@
 #  `> ln -s ~/hrt/boot/settings/ssh/sshd_server.config ~/.ssh/sshd_config
 ########
 
-# Enables public key authentication for SSH.
-PubkeyAuthentication yes
-
-# Authorized public keys for authentication
-AuthorizedKeysFile  .ssh/authorized_keys
+Include $HOME/hrt/boot/settings/ssh/sshd_config.d/*.config
 
 
-########
-# SFTP Server
-#       Subsystem to be used for handling SFTP requests to enable secure file transfer capabilities\
-#
-#           Mac: Subsystem  sftp /usr/libexec/sftp-server
-#      Ubuntu: Subsystem sftp /usr/lib/openssh/sftp-server
-########
-Subsystem sftp /usr/lib/openssh/sftp-server
 
-# applies to users who are members of the "sftp" group
-Match group sftp
-	ForceCommand internal-sftp
-	ChrootDirectory /home
-	# restricting the user from setting up TCP tunnels
-	AllowTcpForwarding no
-	# graphical applications cannot be forwarded from the server to the client
-	X11Forwarding no
