ssh - enable authkey based login

--- a/settings/ssh/ssh_client.config
+++ b/settings/ssh/ssh_client.config
@@ -30,14 +30,19 @@ Host github.com
   AddKeysToAgent yes
   IdentityFile ~/.ssh/server_access_key_github_ed25519
 
+# ssh chaos.ubuntuvm.vbox
+Host chaos.ubuntuvm.vbox
+  Hostname 172.25.66.189
+  IdentityFile ~/.ssh/server_access_key_chaos_ubuntuvm_vbox
+
 # ssh server running in vbox guestos chaos on port 22 [default]
 # NAT Network: vbox -> network -> local port forward is enabled 2222:22
 # Bridge Network: No need for port forward 
 Host erebus.chaos.vbox
-  Hostname 192.168.0.134 
+  Hostname 172.25.66.189
   # Port 2222
-  User balak
-  IdentityFile ~/.ssh/server_access_key_chaos_guest_vbox
+  User erebus
+  IdentityFile ~/.ssh/server_access_key_chaos_ubuntuvm_vbox
 
 Host gaia.chaos.vbox
   Hostname 127.0.0.1
