--- a/settings/ssh/ssh_server.config
+++ b/settings/ssh/ssh_server.config
@@ -3,10 +3,10 @@
 #       Port to listen on:22 [default]
 #
 #  Usage:
-#  `> ln -s ~/hrt/boot/settings/ssh/sshd_server.config ~/.ssh/sshd_config
+#            ln -s ~/hrt/boot/settings/ssh/sshd_server.config ~/.ssh/sshd_config
+#   (OR)
+#        To enable authkey based login
+#            ln -s $HOME/hrt/boot/settings/ssh/sshd_config.d/authorized-keys.conf /etc/ssh/sshd_config.d/authorized-keys.conf
 ########
 
 Include $HOME/hrt/boot/settings/ssh/sshd_config.d/*.config
-
-
-
