--- a/settings/ssh/sshd_config.d/authorized-keys.conf
+++ b/settings/ssh/sshd_config.d/authorized-keys.conf
@@ -2,4 +2,5 @@
 PubkeyAuthentication yes
 
 # Authorized public keys for authentication
-AuthorizedKeysFile  $HOME/.ssh/authorized_keys
+# ! NOTE: This is a relative path to the user's home directory.
+AuthorizedKeysFile  .ssh/authorized_keys
