configure sftp server

--- a/settings/ssh/sshd_config.d/sftp-server.conf
+++ b/settings/ssh/sshd_config.d/sftp-server.conf
@@ -5,6 +5,7 @@
 #           Mac: Subsystem  sftp /usr/libexec/sftp-server
 #      Ubuntu: Subsystem sftp /usr/lib/openssh/sftp-server
 ########
+# This is enabled by default in Ubuntu 23.04
 Subsystem sftp /usr/lib/openssh/sftp-server
 
 # applies to users who are members of the "sftp" group
