configure sftp server

--- a/settings/ssh/sshd_config.d/sftp-server.conf
+++ b/settings/ssh/sshd_config.d/sftp-server.conf
@@ -9,9 +9,9 @@
 Subsystem sftp /usr/lib/openssh/sftp-server
 
 # applies to users who are members of the "sftp" group
-Match group sftp
+Match group sftpusr
 	ForceCommand internal-sftp
-	ChrootDirectory /home
+	ChrootDirectory %h
 	# restricting the user from setting up TCP tunnels
 	AllowTcpForwarding no
 	# graphical applications cannot be forwarded from the server to the client
