kernel init sequence; ssh client config

--- a/settings/ssh/ssh_server.config
+++ b/settings/ssh/ssh_server.config
@@ -9,4 +9,4 @@
 #            ln -s $HOME/hrt/boot/settings/ssh/sshd_config.d/authorized-keys.conf /etc/ssh/sshd_config.d/authorized-keys.conf
 ########
 
-Include $HOME/hrt/boot/settings/ssh/sshd_config.d/*.config
+Include $HOME/hrt/boot/settings/ssh/sshd_config.d/*.conf
