--- a/settings/ssh/ssh_client.config
+++ b/settings/ssh/ssh_client.config
@@ -22,6 +22,14 @@
 # Include all sensitive ssh client configuration from config.d directory
 Include ~/.ssh/config.d/*.conf
 
+Host *
+	# The default is 10 seconds
+	ConnectTimeout 5
+	# Determines whether to prompt the user before adding new host keys to the known_hosts file
+    StrictHostKeyChecking no
+    # File to store host key information, Enable this to disable host key checking (useful for testing environment)
+    # UserKnownHostsFile=/dev/null
+
 Host bitbucket.org
   AddKeysToAgent yes
   IdentityFile ~/.ssh/server_access_key_bitbucket_ed25519_b256
@@ -30,30 +38,16 @@ Host github.com
   AddKeysToAgent yes
   IdentityFile ~/.ssh/server_access_key_github_ed25519
 
-# ssh chaos.ubuntuvm.vbox
+# ssh user@chaos.ubuntuvm.vbox
+# For Bridge network, the host is the ip address of the guestos
 Host chaos.ubuntuvm.vbox
-  Hostname 172.25.66.189
+#  Hostname 172.25.66.189
+  Hostname 10.0.2.15
   IdentityFile ~/.ssh/server_access_key_chaos_ubuntuvm_vbox
 
-# ssh server running in vbox guestos chaos on port 22 [default]
-# NAT Network: vbox -> network -> local port forward is enabled 2222:22
-# Bridge Network: No need for port forward 
-Host erebus.chaos.vbox
-  Hostname 172.25.66.189
-  # Port 2222
+# For NAT network, the host is the localhost with port forward enabled
+Host chaos.guest.vbox
+  Hostname 127.0.0.1
+  Port 2222
+  IdentityFile ~/.ssh/server_access_key_chaos_ubuntuvm_vbox
   User erebus
-  IdentityFile ~/.ssh/server_access_key_chaos_ubuntuvm_vbox
-
-Host gaia.chaos.vbox
-  Hostname 127.0.0.1
-  Port 2222
-  User gaia
-  IdentityFile ~/.ssh/server_access_key_chaos_guest_vbox
-
-Host nyx.chaos.vbox
-  Hostname 127.0.0.1
-  Port 2222
-  User nyx
-  IdentityFile ~/.ssh/server_access_key_chaos_guest_vbox
-	
-
