alias; ssh server

--- a/ctrls/linux/etc/sshd_config.d/sftp-server.conf
+++ b/ctrls/linux/etc/sshd_config.d/sftp-server.conf
@@ -9,9 +9,11 @@
 Subsystem sftp /usr/lib/openssh/sftp-server
 
 # applies to users who are members of the "sftp" group
-Match group sftpusr
-	ForceCommand internal-sftp
-	ChrootDirectory %h
+Match group sftpusrs
+	PasswordAuthentication yes
+	PubkeyAuthentication yes
+	ChrootDirectory /sftpusrs/%u
+	ForceCommand internal-sftp -d /home
 	# restricting the user from setting up TCP tunnels
 	AllowTcpForwarding no
 	# graphical applications cannot be forwarded from the server to the client
