alias; ssh server

--- a/ctrls/linux/etc/sshd_config.d/sftp-server.conf
+++ b/ctrls/linux/etc/sshd_config.d/sftp-server.conf
@@ -9,7 +9,7 @@
 Subsystem sftp /usr/lib/openssh/sftp-server
 
 # applies to users who are members of the "sftp" group
-Match group sftpusrs
+Match group sftpusers
 	PasswordAuthentication yes
 	PubkeyAuthentication yes
 	ChrootDirectory /sftpusrs/%u
