alias; ssh server

--- a/ctrls/linux/etc/ssh_config.d/ssh_client.conf
+++ b/ctrls/linux/etc/ssh_config.d/ssh_client.conf
@@ -39,12 +39,13 @@ Host github.com
   IdentityFile ~/.ssh/server_access_key_github_ed25519
 
 # ssh user@chaos.ubuntuvm.vbox
-# For Bridge network, the host is the ip address of the guestos
 Host chaos.ubuntuvm.vbox
-#  Hostname 172.25.66.189
-  Hostname 10.0.2.15
+  Hostname 127.0.0.1
+  Port 2222
   IdentityFile ~/.ssh/server_access_key_chaos_ubuntuvm_vbox
 
+# For Bridge network, the host is the ip address of the guestos
+#       Hostname 172.25.66.189
 # For NAT network, the host is the localhost with port forward enabled
 Host chaos.guest.vbox
   Hostname 127.0.0.1
