open ssh server

--- a/ctrls/linux/etc/ssh_config.d/ssh_client.conf
+++ b/ctrls/linux/etc/ssh_config.d/ssh_client.conf
@@ -17,10 +17,10 @@
 #  `> ln -s ~/hrt/boot/settings/ssh/ssh_client.config ~/.ssh/config
 #  `> mkdir ~/.ssh/config.d`                           - drop all config files in this directory
 #  `> touch ~/.ssh/config.d/sensitive.conf`  - use .conf suffix so vim can syntax highlight
-###
+####
 
 # Include all sensitive ssh client configuration from config.d directory
-Include ~/.ssh/config.d/*.conf
+Include $HOME/.ssh/config.d/*.conf
 
 Host *
 	# The default is 10 seconds
@@ -42,6 +42,7 @@ Host github.com
 Host chaos.ubuntuvm.vbox
   Hostname 127.0.0.1
   Port 2222
+  IdentitiesOnly yes
   IdentityFile ~/.ssh/server_access_key_chaos_ubuntuvm_vbox
 
 # For Bridge network, the host is the ip address of the guestos
