--- a/ctrls/linux/etc/sshd_config.d/sftpusers.conf
+++ b/ctrls/linux/etc/sshd_config.d/sftpusers.conf
@@ -5,10 +5,10 @@
 #           Mac: Subsystem  sftp /usr/libexec/sftp-server
 #      Ubuntu: Subsystem sftp /usr/lib/openssh/sftp-server
 ########
-# This is enabled by default in Ubuntu 23.04
-Subsystem sftp /usr/lib/openssh/sftp-server
+# This is enabled by default in sshd_config [Ubuntu 23.04]
+# Subsystem sftp /usr/lib/openssh/sftp-server
 
-# applies to users who are members of the "sftp" group
+# applies to users who are members of the "sftpusers" group
 Match group sftpusers
 	PasswordAuthentication yes
 	PubkeyAuthentication yes
