open ssh server: bug fix

--- a/ctrls/linux/etc/sshd_config.d/sftpusers.conf
+++ b/ctrls/linux/etc/sshd_config.d/sftpusers.conf
@@ -12,7 +12,7 @@
 Match group sftpusers
 	PasswordAuthentication yes
 	PubkeyAuthentication yes
-	ChrootDirectory /sftpusrs/%u
+	ChrootDirectory /sftpusers/%u
 	ForceCommand internal-sftp -d /home
 	# restricting the user from setting up TCP tunnels
 	AllowTcpForwarding no
