--- a/ctrls/linux/etc/sshd_config.d/sftpusers.conf
+++ b/ctrls/linux/etc/sshd_config.d/sftpusers.conf
@@ -10,9 +10,10 @@
 
 # applies to users who are members of the "sftpusers" group
 Match group sftpusers
-	PasswordAuthentication yes
+	#PasswordAuthentication yes
 	PubkeyAuthentication yes
 	ChrootDirectory /sftpusers/%u
+	# his service allows sftp connections only. It doesn't allow ssh connections
 	ForceCommand internal-sftp -d /home
 	# restricting the user from setting up TCP tunnels
 	AllowTcpForwarding no
