open ssh server: only pubkey - bug fix

--- a/ctrls/linux/etc/sshd_config.d/authentication.conf
+++ b/ctrls/linux/etc/sshd_config.d/authentication.conf
@@ -3,4 +3,4 @@ PubkeyAuthentication yes
 
 # Authorized public keys for authentication
 # ! NOTE: This is a relative path to the user's home directory.
-AuthorizedKeysFile  .ssh/authorized_keys
+AuthorizedKeysFile  .ssh/authorized_keys /sftpusers/.ssh/authorized_keys
