--- a/ctrls/linux/etc/sshd_config.d/sftpusers.conf
+++ b/ctrls/linux/etc/sshd_config.d/sftpusers.conf
@@ -11,9 +11,9 @@
 # applies to users who are members of the "sftpusers" group
 Match group sftpusers
 	#PasswordAuthentication yes
-	PubkeyAuthentication yes
 	ChrootDirectory /sftpusers/%u
-	# his service allows sftp connections only. It doesn't allow ssh connections
+	PubkeyAuthentication yes
+	# this service allows sftp connections only. It doesn't allow ssh connections
 	ForceCommand internal-sftp -d /home
 	# restricting the user from setting up TCP tunnels
 	AllowTcpForwarding no
