--- a/ctrls/linux/etc/sudoer.d/sudoers.conf
+++ b/ctrls/linux/etc/sudoer.d/sudoers.conf
@@ -2,7 +2,10 @@
 #
 # Usage: Copy or Link this file to /etc/sudoers.d/sudoer.conf
 #
-#       ln -s $HOME/hrt/custom/unix/drop-in/sudoer.conf /etc/sudoers.d/hrt-sudoer.conf
+#       ln -s $HOME/hrt/boot/ctrls/linux/etc/sudoer.d/sudoers.conf /etc/sudoers.d/hrt-sudoer.conf
 
 # time out after 10 Hours
 Defaults timestamp_timeout=600
+
+#  grants sudo privileges to all users whose usernames end with "admin."
+%admin   ALL=(ALL:ALL) ALL
