sftp file system

--- a/ctrls/linux/etc/sshd_config.d/sftpusers.conf
+++ b/ctrls/linux/etc/sshd_config.d/sftpusers.conf
@@ -11,10 +11,10 @@
 # applies to users who are members of the "sftpusers" group
 Match group sftpusers
 	PubkeyAuthentication yes
-	ChrootDirectory /sftpusers/%u
-	AuthorizedKeysFile /sftpusers/%u/.ssh/authorized_keys
-	# this service allows sftp connections only. It doesn't allow ssh connections
-	ForceCommand internal-sftp -d /home
+	ChrootDirectory /sftp/%u
+	AuthorizedKeysFile /sftp/%u/.ssh/authorized_keys
+	# this service allows sftp connections only. It doesn't allow ssh connections. Enable this for extra security
+	# ForceCommand internal-sftp -d /home
 	# restricting the user from setting up TCP tunnels
 	AllowTcpForwarding no
 	# graphical applications cannot be forwarded from the server to the client
