sftp file system issue debugging

--- a/ctrls/linux/etc/ssh_config.d/ssh_client.conf
+++ b/ctrls/linux/etc/ssh_config.d/ssh_client.conf
@@ -45,6 +45,12 @@ Host chaos.ubuntuvm.vbox
   IdentitiesOnly yes
   IdentityFile ~/.ssh/server_access_key_chaos_ubuntuvm_vbox
 
+Host chaos.sftp.vbox
+  Hostname 127.0.0.1
+  Port 2222
+  IdentitiesOnly yes
+  IdentityFile ~/.ssh/server_access_key_sftp_chaos_uvm
+
 # For Bridge network, the host is the ip address of the guestos
 #       Hostname 172.25.66.189
 # For NAT network, the host is the localhost with port forward enabled
