--- a/ctrls/linux/etc/sudoer.d/timeout.conf
+++ b/ctrls/linux/etc/sudoer.d/timeout.conf
@@ -1,8 +1,11 @@
 # Drop-in sudoer configuration
 #
+#  !    Note: File name with . in it will be ignored by sudoers
+#
 # Usage: Copy or Link this file to /etc/sudoers.d/sudoer.conf
 #
-#       ln -s $HOME/hrt/boot/ctrls/linux/etc/sudoer.d/sudoers.conf /etc/sudoers.d/hrt-sudoer.conf
+#       ln -s $HOME/hrt/boot/ctrls/linux/etc/sudoer.d/sudoers.conf /etc/sudoers.d/timout.conf
+#
 
 # time out after 10 Hours
 Defaults timestamp_timeout=600
