--- a/ctrls/linux/etc/ssh_config.d/ssh_client.conf
+++ b/ctrls/linux/etc/ssh_config.d/ssh_client.conf
@@ -49,7 +49,8 @@ Host chaos.sftp.vbox
   Hostname 127.0.0.1
   Port 2222
   IdentitiesOnly yes
-  IdentityFile ~/.ssh/server_access_key_sftp_chaos_uvm
+  IdentityFile ~/.ssh/sshd_prv_key
+  # IdentityFile ~/.ssh/server_access_key_sftp_chaos_uvm
 
 # For Bridge network, the host is the ip address of the guestos
 #       Hostname 172.25.66.189
