ssh server jsch connect issue fix

--- a/ctrls/linux/etc/sshd_config.d/authentication.conf
+++ b/ctrls/linux/etc/sshd_config.d/authentication.conf
@@ -2,7 +2,7 @@
 PubkeyAuthentication yes
 
 # without this Jsch will not connect to the server
-PubkeyAcceptedAlgorithms ssh-rsa,ssh-dss,ecdsa-sha2-nistp256,ecdsa-sha2-nistp384,ecdsa-sha2-nistp521
+PubkeyAcceptedAlgorithms ssh-rsa,ssh-dss,ecdsa-sha2-nistp256,ecdsa-sha2-nistp384,ecdsa-sha2-nistp521,ssh-ed25519,ssh-ed25519
 
 # Authorized public keys for authentication
 # ! NOTE: This is a relative path to the user's home directory.
