ssh hostname; ls with full apth

--- a/ctrls/linux/etc/ssh_config.d/ssh_client.conf
+++ b/ctrls/linux/etc/ssh_config.d/ssh_client.conf
@@ -26,9 +26,9 @@ Host *
 	# The default is 10 seconds
 	ConnectTimeout 5
 	# Determines whether to prompt the user before adding new host keys to the known_hosts file
-    StrictHostKeyChecking no
-    # File to store host key information, Enable this to disable host key checking (useful for testing environment)
-    # UserKnownHostsFile=/dev/null
+  StrictHostKeyChecking no
+  # File to store host key information, Enable this to disable host key checking (useful for testing environment)
+  # UserKnownHostsFile=/dev/null
 
 Host bitbucket.org
   AddKeysToAgent yes
@@ -38,24 +38,18 @@ Host github.com
   AddKeysToAgent yes
   IdentityFile ~/.ssh/server_access_key_github_ed25519
 
-# ssh user@chaos.ubuntuvm.vbox
-Host chaos.ubuntuvm.vbox
+# sftp sftpclt@sftp.chaos.ubuntuvm.vbox
+Host sftp.chaos.ubuntuvm.vbox
   Hostname 127.0.0.1
   Port 2222
   IdentitiesOnly yes
   IdentityFile ~/.ssh/server_access_key_chaos_ubuntuvm_vbox
 
-Host chaos.sftp.vbox
-  Hostname 127.0.0.1
-  Port 2222
-  IdentitiesOnly yes
-  IdentityFile ~/.ssh/sshd_prv_key
-  # IdentityFile ~/.ssh/server_access_key_sftp_chaos_uvm
-
 # For Bridge network, the host is the ip address of the guestos
 #       Hostname 172.25.66.189
 # For NAT network, the host is the localhost with port forward enabled
-Host chaos.guest.vbox
+# ssh chaos.ubuntuvm.vbox
+Host chaos.ubuntuvm.vbox
   Hostname 127.0.0.1
   Port 2222
   IdentityFile ~/.ssh/server_access_key_chaos_ubuntuvm_vbox
