servers for hrt host

--- a/ctrls/linux/etc/ssh_config.d/ssh_client.conf
+++ b/ctrls/linux/etc/ssh_config.d/ssh_client.conf
@@ -26,9 +26,9 @@ Host *
 	# The default is 10 seconds
 	ConnectTimeout 5
 	# Determines whether to prompt the user before adding new host keys to the known_hosts file
-  StrictHostKeyChecking no
-  # File to store host key information, Enable this to disable host key checking (useful for testing environment)
-  # UserKnownHostsFile=/dev/null
+	StrictHostKeyChecking no
+	# File to store host key information, Enable this to disable host key checking (useful for testing environment)
+	# UserKnownHostsFile=/dev/null
 
 Host bitbucket.org
   AddKeysToAgent yes
@@ -54,3 +54,10 @@ Host chaos.ubuntuvm.vbox
   Port 2222
   IdentityFile ~/.ssh/server_access_key_chaos_ubuntuvm_vbox
   User erebus
+
+# ssh server from container 
+Host sftp.sshd.ctr
+  Hostname 127.0.0.1
+  Port 4319
+  IdentityFile ~/.ssh/psk_sshdserver_ctr_pem
+  User gaia
