--- a/tools/git/config
+++ b/tools/git/config
@@ -1,6 +1,6 @@
 [user]
 	email = krishnam.balamurugan.eng@gmail.com
-	name = bala
+	name = Bala
 [pull]
 	rebase = false
 [core]
@@ -10,7 +10,7 @@
 	logallrefupdates = true
 	ignorecase = true
 	precomposeunicode = true
-	excludesfile = ~/hrt/boot/git/.gitignore_global
+	excludesfile = ~/Paradigm/Development/tools/git/.gitignore_global
 [remote "origin"]
 	url = git@github.com:krishnam-eng/homelab-devbox.git
 	fetch = +refs/heads/main:refs/remotes/origin/main
