Refactor developer environment setup: streamline IDE installation, add productivity apps, and enhance search tool aliases

--- a/conf/git/config
+++ b/conf/git/config
@@ -11,3 +11,5 @@
 [includeIf "gitdir:/Users/balamurugank/sbrn/res/notes/work-journal/"]
     path = /Users/balamurugank/sbrn/sys/config/git/config-work
 
+[core]
+	pager = diff-so-fancy | less --tabs=4 -RFX
