--- a/conf/vscode/settings.json
+++ b/conf/vscode/settings.json
@@ -1,4 +1,8 @@
 {
+  "git.path": "/opt/homebrew/bin/git",
+  "git.defaultCloneDirectory": "~/sbrn/proj/exp",
+  "git.autofetch": true,
+  "git.confirmSync": false,
   "github.copilot.nextEditSuggestions.enabled": true,
   "github.copilot.enable": {
     "*": true,
@@ -10,9 +14,17 @@
   "terminal.integrated.fontSize": 13,
   "terminal.integrated.allowLigatures": true,
   "terminal.integrated.defaultProfile.osx": "zsh",
+  "terminal.integrated.env.osx": {
+    "XDG_CONFIG_HOME": "$HOME/sbrn/sys/config",
+    "XDG_DATA_HOME": "$HOME/sbrn/sys/local/share",
+    "XDG_STATE_HOME": "$HOME/sbrn/sys/local/state", 
+    "XDG_CACHE_HOME": "$HOME/sbrn/sys/cache"
+  },
+  "workbench.settings.editor": "json",  
   "workbench.iconTheme": "a-file-icon-vscode",
   "workbench.productIconTheme": "a-file-icon-vscode-product-icon-theme",
-  "git.autofetch": true,
-  "git.confirmSync": false,
-  "explorer.confirmDelete": false
+  "explorer.confirmDelete": false,
+  "extensions.autoUpdate": true,
+  "python.defaultInterpreterPath": "~/sbrn/sys/local/share/conda/envs/base/bin/python",
+  "files.defaultLanguage": "markdown"
 }
