--- a/conf/uv/ml-dev-pyproject.toml
+++ b/conf/uv/ml-dev-pyproject.toml
@@ -33,6 +33,9 @@ dependencies = [
     
     # Basic ML tools
     "chromadb",
+    "weaviate-client",
+    "pinecone-client",
+    "qdrant-client",
     "streamlit",
     "mlflow",
 ]
