Remove config-work from tracking and add to gitignore
- Added conf/git/config-work to .gitignore to prevent tracking personal git config
- Removed conf/git/config-work from git repository while preserving local file

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ tmux/plugins/tmux-mem-cpu-load
 # private config
 ctrls/darwin/map/private.bash
 ctrls/darwin/map/private.zsh
+conf/git/config-work
 
 
 #
